Fix structured data (JSON-LD) to use proper Tiation/ChaseWhiteRabbit branding and URLs

--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "Abundant Aussie",
-      "url": "https://abundantaussie.com",
-      "logo": "https://abundantaussie.com/favicon.ico",
-      "description": "Exploring Australia's economic potential through innovative fiscal policy solutions",
+      "name": "Tiation & ChaseWhiteRabbit",
+      "url": "https://tiation.github.io/19-trillion-solution/",
+      "logo": "https://tiation.github.io/19-trillion-solution/favicon.ico",
+      "description": "Collaborative initiative exploring Australia's economic potential through innovative fiscal policy solutions and the $19 trillion balance sheet value unlock",
       "sameAs": [
-        "https://twitter.com/abundantaussie"
+        "https://twitter.com/tiation",
+        "https://github.com/tiation",
+        "https://github.com/ChaseWhiteRabbit"
       ]
     }
     </script>
